# graphics-course

common/render_utils/shaders/: unpack_attributes_baked.glsl
common/scene/: SceneManager.cpp  SceneManager.hpp
tasks/: CMakeLists.txt
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: UniformParams.h  toy.frag
tasks/local_shadertoy1/: App.cpp  App.hpp
tasks/local_shadertoy1/shaders/: toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: texture.frag  toy.frag
tasks/many_objects/: CMakeLists.txt
tasks/many_objects/baker/: CMakeLists.txt  main.cpp
tasks/many_objects/renderer/: App.cpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/many_objects/renderer/shaders/: static_mesh.vert
tasks/model_bakery/baker/: CMakeLists.txt  main.cpp
tasks/model_bakery/renderer/: WorldRenderer.cpp
tasks/tonemapping/baker/: CMakeLists.txt
tasks/tonemapping/renderer/: CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/tonemapping/renderer/shaders/: density_hist.comp  postprocess.comp  texture.frag  tonemapping.frag  tonemapping.vert
